# StructBuffer

./: README.md  struct_buffer.hpp  test.cpp
benchmark/: build.txt  compare.hpp  main.cpp  struct_rpc_defines.hpp
benchmark/msgpack/: compare.hpp  main.cpp  msg_pack_defines.hpp
benchmark/protobuf/: benchmark_pb.cpp  compare.hpp  main.cpp  struct.pb.cc  struct.pb.h  struct.proto
doc/: doc.md
example/: example.cpp  struct_defines.hpp
trunk/: CMakeLists.txt  base.h  deserializer.hpp  macros.h  serializer.hpp  serializer_copy.hpp
trunk/scripts/: generated_macro.txt  generated_template.txt  macro_generator.py  template_generator.py
trunk/utils/: aggregate_constexpr_for.hpp  constexpr_for.hpp  flag_classes.h  struct_member_getter.hpp  timer.hpp  trait_helper.h
